<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="spinner">
        <item>购</item>
        <item>食</item>
        <item>住</item>
        <item>行</item>
    </string-array>

    <string name="app_name">短途游</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_user">添加好友</string>
    <string name="loaction">附近的人</string>
    <string name="bill">账单</string>
    <string name="menu">菜单</string>
    <string name="all">所有人</string>
    <string name="friend">好友</string>
    <string name="market">交易</string>
    <string name="notice">通知</string>
    <string name="ok">确定</string>
    <string name="buy">购买</string>
    <string name="delete">删除</string>
    <string name="add_bill">添加新账单</string>
    <string name="add_card">发帖</string>
    <!-- bmob -->
    <string name="login_username_hint">请输入邮箱&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">邮箱 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">邮箱不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="morediscuss">查看全部%1$d条评论</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于我们</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="add_trip">添加攻略</string>
    <string name="add_discuss">添加评论</string>
    <string name="roster">花名</string>
    <string name="select">查询</string>
    <string name="attdis">概述：杭州西湖位于杭州市市中心，旧称武林水、钱塘湖、西子湖，宋代始称西湖。 它以秀丽的湖光山色和众多的名胜古迹闻名中外，是我国著名的旅游胜地，也被誉为人间天堂。 风景区以西湖为中心，分为湖滨区、湖心区、北山区、南山区和钱塘区五个地区，总面积49平方公里。西湖的美在于晴天水潋滟，雨天山空蒙。无论雨雪晴阴，无论早霞晚辉，都能变幻成景；在春花，秋月，夏荷，冬雪中各具美态。湖区以苏堤，白堤两个景段的优美风光称著。 美食：杭州菜属中国八大菜系之浙菜，\"清爽别致\"是杭州菜的最大特色。宋代大诗人苏东坡曾盛赞\"天下酒宴之盛，未有如杭城也\"，且有\"闻香下马\"的典故。 杭州的名菜举不胜举，最著名的有叫化鸡、东坡肉、宋嫂鱼羹、西湖醋鱼、龙井虾仁、西湖莼菜汤、油焖春笋等。东坡肉肥而不腻，叫化鸡香嫩爽口，西湖醋鱼鲜美可口到杭州游览不可不尝。 杭州著名的菜馆有\"老字号\"的楼外楼、天外天、山外山等，初到杭州的你也许会冲着\"楼外楼\"慕名而去，的确此处除了占尽西湖风景佳绝处，古色古香的建筑，凭窗眺望，可见波光潋滟的西湖，很有些老杭州的味道，味道也比较正宗。除此以外，在杭州品尝美食的地方还有许多。 龙井问茶作为西湖新十景之一早已是闻名天下，妇孺皆知，然而杭州还有其他品茶佳处。你可以在梅家坞喝茶休闲，享受大自然的舒适与自由；也可以在文澜茶阁品茗谈笑，感受藏书阁的清雅与幽静。 购物：说去香港要\"血拼\"，到杭州则是\"扫货\"，因为杭州众多百货商店和品牌店的折扣都要比其他地方大，价格自然就要低许多。所以杭州也是爱淘便宜货的MM的最爱。 大部分人去杭州已经不满足于购买一些藕粉、绸散茶叶之类的土特产，杭州以越来越时尚的的姿态吸引更多的时尚中人前往购物。武林路的杭派女装、四季青服装市尝杭州丝绸城等等，都会让爱美女孩流连忘返。 杭州的商场主要集中在武林商圈和湖滨商圈。武林广场的大型商场主要有杭州大厦，杭州百货大楼，银泰百货，连卡佛。湖滨商圈主要是有元华商场，解放路百货商场，利星名品广场，西湖时代广场，湖滨路国际名品街。商店琳琅满目，满足上至奢侈族，下至百姓的各级消费需求。 杭州河坊街 河坊街体现了清末明初风貌，营造以商业、药业、建筑等为主体的市井文化。河坊街是目前最能够体现杭州历史文化风貌的街道之一，也是西湖申报世界历史文化遗产的有机组成部分。 杭州武林路 武林路有众多的特色小店，风格多元，时尚人士常出没于此。武林路也被人们称之为"杭派女装的聚集地"，因为声名远播的杭派女装就是从这里走向全国的，其中就包括江南布衣、秋水伊人、西门町等品牌。 娱乐：杭州的娱乐业较发达，新兴娱乐活动层出不穷。华灯初放杭州五洲大酒店、花园式度假酒店、杭州东方龙大酒店等配有的夜总会、桑拿、保龄球、游泳池、健康房、美容美发厅及网球场等综合设施的酒店对人门敞开了大门。 杭州人的娱乐生活是丰富而带点矛盾色彩的，在梅家坞、龙井村喝茶打牌悠哉游哉者有之；南山路酒吧一条街疯狂泡吧不醉不归者有之；在西湖天地悠喝咖啡醉于湖景者有之；在湖滨路步行街纸醉金迷夜夜笙歌更是有之。</string>

</resources>