<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/add_card"
        android:icon="@drawable/ic_edit"
        android:title="@string/add_card"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_more"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" >
            <item
                android:id="@+id/all"
                android:icon="@drawable/disscuss_all"
                android:title="@string/all"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/friends"
                android:icon="@drawable/discuss_frient"
                android:title="@string/friend"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/market"
                android:icon="@drawable/bussniess"
                android:title="@string/market"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/notice"
                android:icon="@drawable/notify"
                android:title="@string/notice"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>

</menu>