<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#CCCCCC"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="100dp"
            android:gravity="bottom"
            android:text="用户名"
            android:textColor="@color/font_black_content" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header" >

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="5"
                android:gravity="center|start"
                android:padding="5dp"
                android:text="邮箱"
                android:textColor="@color/font_black_content"
                android:textSize="@dimen/font_setting_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="5"
                android:gravity="center|end"
                android:padding="5dp"
                android:text="性别"
                android:textColor="@color/font_black_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:scrollbars="none" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:id="@+id/layout_blacklist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_selector"
                        android:minHeight="50dp"
                        android:padding="10dp" >

                        <TextView
                            style="@style/Smile.TextView._Black"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="@string/set_blacklist" />

                        <TextView
                            style="@style/Smile.TextView._Black"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:drawablePadding="10dp"
                            android:drawableRight="@drawable/register_bottom_arrow" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/base_line_width_2"
                        android:background="@drawable/base_horizontal_line" >
                    </View>

                    <RelativeLayout
                        android:id="@+id/rl_switch_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_selector"
                        android:padding="10dip" >

                        <TextView
                            style="@style/Smile.TextView._Black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/set_notify" />

                        <ImageView
                            android:id="@+id/iv_open_notification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/on"
                            android:visibility="visible" />

                        <ImageView
                            android:id="@+id/iv_close_notification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/off"
                            android:visibility="invisible" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/base_line_width_2"
                        android:background="@drawable/base_horizontal_line" >
                    </View>

                    <RelativeLayout
                        android:id="@+id/rl_switch_voice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_selector"
                        android:padding="10dip" >

                        <TextView
                            style="@style/Smile.TextView._Black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/set_voice" />

                        <ImageView
                            android:id="@+id/iv_open_voice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/on"
                            android:visibility="visible" />

                        <ImageView
                            android:id="@+id/iv_close_voice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/off"
                            android:visibility="invisible" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/view1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/base_line_width_2"
                        android:background="@drawable/base_horizontal_line" >
                    </View>

                    <RelativeLayout
                        android:id="@+id/rl_switch_vibrate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_selector"
                        android:padding="10dip" >

                        <TextView
                            style="@style/Smile.TextView._Black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/set_vibrate" />

                        <ImageView
                            android:id="@+id/iv_open_vibrate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/on"
                            android:visibility="visible" />

                        <ImageView
                            android:id="@+id/iv_close_vibrate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/off"
                            android:visibility="invisible" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/base_line_width_2"
                        android:background="@drawable/base_horizontal_line" >
                    </View>

                    <Button
                        android:id="@+id/btn_logout"
                        style="@style/Smile.Button.logout"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_margin="@dimen/activity_vertical_margin"
                        android:text="@string/logout" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>

    <com.excursions.ui.customview.RoundImageView
        android:id="@+id/user_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@id/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/floating_action_button_margin_normal_minus"
        android:layout_marginEnd="@dimen/floating_action_button_margin_normal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_launcher"
        imagecontrol:border_inside_color="#bc0978"
        imagecontrol:border_outside_color="#ba3456"
        imagecontrol:border_thickness="1dp" />

</RelativeLayout>